# indico-plugins-mpp

./: README.md  rpm_alllocal.sh  srpmsbuild.sh
RPMS/: python3-indico-mpppanel-plugin-0.1-1.fc39.noarch.rpm
mpppanel/: pyproject.toml
mpppanel/indico_mpppanel/: __init__.py
mpppanel/indico_panel/: __init__.py
panel/: pyproject.toml
panel/indico_panel/: __init__.py
python-indico-plugins-mpp/0.1/: python-indico-plugins-mpp.spec
