[project]
name = 'indico-plugin-panel'
version = '3.3-dev'
license = 'MIT'
authors = [{ name = 'Indico Team', email = 'indico-team@cern.ch' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3.dev0']

[project.urls]
GitHub = 'https://github.com/andriish/indico-plugins-mpp'

[project.entry-points.'indico.plugins']
panel = 'indico_panel.plugin:panelPlugin'

[build-system]
requires = ['hatchling==1.27.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_panel']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]
